fixed spacing

--- a/css/creative.css
+++ b/css/creative.css
@@ -2621,6 +2621,7 @@ fieldset:disabled a.btn {
 .btn-secondary {
   color: #fff;
   border: 2px solid #f4623a!important;
+  margin-top: 15px;
 }
 
 .btn-primary:hover {
